----------------------------------------------------------------------
Thu Jun 24 18:25:35 2004                        Michael Jennings (mej)

Fixed logic error with "mzput -x"
----------------------------------------------------------------------
Thu Jun 24 18:30:52 2004                        Michael Jennings (mej)

Another logic error. :(
----------------------------------------------------------------------
Thu Jun 24 19:29:24 2004                        Michael Jennings (mej)

Fixed CVS logins.
----------------------------------------------------------------------
Thu Jun 24 19:34:07 2004                        Michael Jennings (mej)

Update spec file with new release number.

Pray that this message goes to list.  ;-)
----------------------------------------------------------------------
Thu Jun 24 19:37:22 2004                        Michael Jennings (mej)

Testing commit e-mail....
----------------------------------------------------------------------
Mon Jun 28 12:56:50 2004                        Michael Jennings (mej)

Tag/branch/revision-related stuff should be working now.
----------------------------------------------------------------------
Tue Jul 13 15:58:01 2004                        Michael Jennings (mej)

Fixed regexp quoting error in specgen.

Reworked banner and spacing in commit message to be a little more
friendly and seamless.  Also fixed the gratuitous removal of blank
lines in the message.
----------------------------------------------------------------------
Wed Jul 21 20:30:58 2004                        Michael Jennings (mej)

gmkurtzer is helping me track down a cache bug....
----------------------------------------------------------------------
Wed Jul 21 22:09:06 2004                        Michael Jennings (mej)

This should fix the caching problems.  Also added an option for
setting the root of the build tree (formerly only
$MEZZANINE_BUILDDIR).
----------------------------------------------------------------------